--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: Jekyll dates
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -23,5 +23,13 @@ markdown: kramdown
 defaults:
   - { scope: { type: "pages" }, values: { layout: "page" } }
 
-#timezone: Europe/Paris
+# +0100
+# timezone: Europe/Paris
+# -0900
+# timezone: America/Anchorage
+# +1200
+#timezone: Pacific/Auckland
 
+
+# print posts with a future date
+# future: true
